tests/negative/interpolation_unclosed_expr.osc
// EXPECT ERROR: Unterminated interpolation expression inside a string literal.

fn! main() {
    let value: i32 = 5;
    println("value={value");
}
